updated Dockerfile and logback